@@ -8,48 +8,55 @@ AC_DEFUN([NTP_LINEEDITLIBS], [
         [use_lineeditlibs="$withval"],
 	[use_lineeditlibs="edit,editline"])
 
-    for lineedit_lib in `echo $use_lineeditlibs | sed -e 's/,/ /'`; do
-      for term_lib in "" termcap curses ncurses; do
-        case "$term_lib" in
-         '') TRY_LIB="-l$lineedit_lib" ;;
-         *)  TRY_LIB="-l$lineedit_lib -l$term_lib" ;;
-        esac
-        LIBS="$ORIG_LIBS $TRY_LIB"
-	AC_MSG_CHECKING([for readline() with $TRY_LIB])
-        AC_TRY_LINK_FUNC([readline], [ntp_cv_lib_lineedit="$TRY_LIB"])
-        case "$ntp_cv_lib_lineedit" in
+    AC_MSG_CHECKING([line editing libraries])
+    AC_MSG_RESULT([$use_lineeditlibs])
+    case "$use_lineeditlibs" in
+     no) ntp_cv_lib_lineedit=no ;;
+     *)
+	for lineedit_lib in `echo $use_lineeditlibs | sed -e 's/,/ /'`; do
+	  for term_lib in "" termcap curses ncurses; do
+	    case "$term_lib" in
+	     '') TRY_LIB="-l$lineedit_lib" ;;
+	     *)  TRY_LIB="-l$lineedit_lib -l$term_lib" ;;
+	    esac
+	    LIBS="$ORIG_LIBS $TRY_LIB"
+	    AC_MSG_CHECKING([for readline() with $TRY_LIB])
+	    AC_TRY_LINK_FUNC([readline], [ntp_cv_lib_lineedit="$TRY_LIB"])
+	    case "$ntp_cv_lib_lineedit" in
+	     '')
+		AC_MSG_RESULT([no])
+		;;
+	     *) # Use readline()
+		AC_MSG_RESULT([yes])
+		break
+		;;
+	    esac
+	    AC_MSG_CHECKING([for el_gets() with $TRY_LIB])
+	    AC_TRY_LINK_FUNC([el_gets], [ntp_cv_lib_lineedit="$TRY_LIB"])
+	    case "$ntp_cv_lib_lineedit" in
+	     '')
+		AC_MSG_RESULT([no])
+		;;
+	     *) # Use el_gets()
+		AC_MSG_RESULT([yes])
+		break
+		;;
+	    esac
+	  done
+	  case "$ntp_cv_lib_lineedit" in
+	   '') ;;
+	   *)  break ;;
+	  esac
+	done
+	LIBS="$ORIG_LIBS"
+	case "$ntp_cv_lib_lineedit" in
 	 '')
-	    AC_MSG_RESULT([no])
+	    ntp_cv_lib_lineedit="no"
 	    ;;
-	 *) # Use readline()
-	    AC_MSG_RESULT([yes])
-	    break
+	 *) EDITLINE_LIBS="$ntp_cv_lib_lineedit"
+	    AC_SUBST(EDITLINE_LIBS)
 	    ;;
-        esac
-	AC_MSG_CHECKING([for el_gets() with $TRY_LIB])
-        AC_TRY_LINK_FUNC([el_gets], [ntp_cv_lib_lineedit="$TRY_LIB"])
-        case "$ntp_cv_lib_lineedit" in
-	 '')
-	    AC_MSG_RESULT([no])
-	    ;;
-	 *) # Use el_gets()
-	    AC_MSG_RESULT([yes])
-	    break
-	    ;;
-        esac
-      done
-      case "$ntp_cv_lib_lineedit" in
-       '') ;;
-       *)  break ;;
-      esac
-    done
-    LIBS="$ORIG_LIBS"
-    case "$ntp_cv_lib_lineedit" in
-     '')
-	ntp_cv_lib_lineedit="no"
-	;;
-     *) EDITLINE_LIBS="$ntp_cv_lib_lineedit"
-	AC_SUBST(EDITLINE_LIBS)
+	esac
 	;;
     esac
   ])
