@@ -1,3 +1,4 @@
+* more cleanup to ntp_lineeditlibs.m4.
 * Documentation updates from Dave Mills.
 * -ledit cleanup for ntpdc and ntpq.
 * Association and other cleanup from Dave Mills.
